PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||

?? ??? ????, PHP 7.4.2


19 Dec 2019, PHP 7.4.1

- Core:
  . Fixed bug #78810 (RW fetches do not throw "uninitialized property"
    exception). (Nikita)
  . Fixed bug #78868 (Calling __autoload() with incorrect EG(fake_scope) value).
    (Antony Dovgal, Dmitry)
  . Fixed bug #78296 (is_file fails to detect file). (cmb)
  . Fixed bug #78883 (fgets(STDIN) fails on Windows). (cmb)
  . Fixed bug #78898 (call_user_func(['parent', ...]) fails while other
    succeed). (Nikita)
  . Fixed bug #78904 (Uninitialized property triggers __get()). (Nikita)
  . Fixed bug #78926 (Segmentation fault on Symfony cache:clear). (Nikita)

- GD:
  . Fixed bug #78849 (GD build broken with -D SIGNED_COMPARE_SLOW). (cmb)
  . Fixed bug #78923 (Artifacts when convoluting image with transparency).
    (wilson chen)

- FPM:
  . Fixed bug #76601 (Partially working php-fpm ater incomplete reload).
    (Maksim Nikulin)
  . Fixed bug #78889 (php-fpm service fails to start). (Jakub Zelenka)
  . Fixed bug #78916 (php-fpm 7.4.0 don't send mail via mail()).
    (Jakub Zelenka)

- Intl:
  . Implemented FR #78912 (INTL Support for accounting format). (cmb)

- Mysqlnd:
  . Fixed bug #78823 (ZLIB_LIBS not added to EXTRA_LIBS). (Arjen de Korte)

- OPcache:
  . Fixed $x = (bool)$x; with opcache (should emit undeclared variable notice).
    (Tyson Andre)
  . Fixed bug #78935 (Preloading removes classes that have dependencies).
    (Nikita, Dmitry)

- PCRE:
  . Fixed bug #78853 (preg_match() may return integer > 1). (cmb)

- Reflection:
  . Fixed bug #78895 (Reflection detects abstract non-static class as abstract
    static. IS_IMPLICIT_ABSTRACT is not longer used). (Dmitry)

- Standard:
  . Fixed bug #77638 (var_export'ing certain class instances segfaults). (cmb)
  . Fixed bug #78840 (imploding $GLOBALS crashes). (cmb)