@@ -3,6 +3,8 @@ PHP                                                                        NEWS
 
 ?? ??? ????, PHP 7.4.2
 
+- OPcache:
+  . Fixed bug #78950 (Preloading trait method with static variables). (Nikita)
 
 19 Dec 2019, PHP 7.4.1
 
